--- a/platformio.ini
+++ b/platformio.ini
@@ -13,9 +13,15 @@ platform = espressif8266
 board = nodemcuv2
 framework = arduino
 monitor_speed = 9600
+lib_deps = 
+	esphome/ESPAsyncWebServer-esphome@^3.1.0
+	esphome/AsyncTCP-esphome@^2.1.3
 
 [env:uno]
 platform = atmelavr
 board = uno
 framework = arduino
 monitor_speed = 9600
+lib_deps = 
+	esphome/ESPAsyncWebServer-esphome@^3.1.0
+	esphome/AsyncTCP-esphome@^2.1.3
