--- a/platformio.ini
+++ b/platformio.ini
@@ -13,11 +13,24 @@ platform = espressif8266
 board = nodemcuv2
 framework = arduino
 monitor_speed = 9600
-monitor_filters = esp8266_exception_decoder, default
+monitor_filters = 
+	esp8266_exception_decoder
+	default
 
 [env:uno]
 platform = atmelavr
 board = uno
 framework = arduino
 monitor_speed = 9600
-monitor_filters = esp8266_exception_decoder, default
+monitor_filters = 
+	esp8266_exception_decoder
+	default
+
+[env:d1mini]
+board = d1_mini_lite
+framework = arduino
+monitor_speed = 9600
+monitor_filters = 
+	esp8266_exception_decoder
+	default
+platform = espressif8266
